# transcript_to_audio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
source/: schemas.py  text_to_speech.py
source/tts/: base.py  factory.py
source/tts/providers/: azureopenai.py  edge.py  elevenlabs.py  gemini.py  geminimulti.py  openai.py
tests/: executable_test_tts.py  test_script.py
tests/transcripts/: sample_transcript_en.txt  sample_transcript_fi.txt  sample_transcript_sv.txt
transcript_to_audio/: __init__.py  schemas.py  text_to_speech.py
transcript_to_audio/tts/: base.py  factory.py
transcript_to_audio/tts/providers/: azureopenai.py  edge.py  elevenlabs.py  openai.py
