[tool.poetry]
name = "transcript-to-audio"
version = "0.0.1"
description = "A library for turning a transcript into a audio file."
authors = ["Markus Haverinen <mathatan@gmail.com>"]
readme = "README.md"
packages = [
  { include = "source" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydub = ">=0.25.1,<0.26.0"
elevenlabs = ">=1.56.0,<2.0.0"
edge-tts = ">=7.0.0,<8.0.0"
ffmpeg = ">=1.4,<2.0"
google-cloud-texttospeech = ">=2.26.0,<3.0.0"
nest-asyncio = ">=1.6.0,<2.0.0"
openai = ">=1.73.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
